Add Makefile and setup.cfg-* files to MANIFEST.in
git-archimport-id: tsui.tony@gmail.com--projects/guppy--release--0.0.91--patch-6

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include AUTHORS COPYING MANIFEST.in NEWS README
-include setup.py
+include setup.py Makefile setup.cfg-suse setup.cfg-fedora
 recursive-include doc *.dia *.png *.txt
 recursive-include guppy *.py *.glade *.xml *.png
 recursive-include po *.po
