--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 include AUTHORS COPYING MANIFEST.in NEWS README
 include setup.py Makefile setup.cfg-suse setup.cfg-fedora
 recursive-include doc *.dia *.png *.txt
-recursive-include guppy *.py *.glade *.xml *.png
+recursive-include guppy *.py *.glade *.xml *.png *.svg
 recursive-include po *.po
 recursive-include testing *.py *.txt puppy
