Update NEWS and version number for 1.0.0
git-archimport-id: tsui.tony@gmail.com--projects/guppy--dev--0.0.1--patch-183

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,4 +4,4 @@ recursive-include doc *.dia *.png *.txt
 recursive-include guppy *.py *.glade *.xml *.png *.svg
 recursive-include po *.po
 recursive-include testing *.py *.txt puppy
-recursive-include hal *.fdi *.png hal-system-toppy
+recursive-include hal *.fdi *.png hal-system-toppy debian*
