Add files in pkg/ to source tarball.
git-archimport-id: tsui.tony@gmail.com--projects/guppy--release--1.0.1--patch-4

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,3 +5,6 @@ recursive-include guppy *.py *.glade *.xml *.png *.svg
 recursive-include po *.po
 recursive-include testing *.py *.txt puppy
 recursive-include hal *.fdi *.png hal-toppy-set-procperm debian*
+prune hal/.arch-ids
+recursive-include pkg *
+prune pkg/.arch-ids
