--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,7 +5,8 @@ recursive-include guppy *.py *.glade *.xml
 recursive-include pixmaps *.png *.svg
 recursive-include po *.po
 recursive-include testing *.py *.txt puppy
-recursive-include hal *.fdi *.png hal-toppy-set-procperm debian*
+recursive-include hal *.fdi hal-toppy-set-procperm debian*
+recursive-include puppy *.c *.h Makefile LICENCE *.spec
 prune hal/.arch-ids
 recursive-include pkg *
 prune pkg/.arch-ids
