--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,8 @@
 include AUTHORS COPYING MANIFEST.in NEWS README CONTRIBUTORS
 include setup.py Makefile setup.cfg-suse setup.cfg-fedora guppy.desktop
 recursive-include doc *.dia *.png *.txt
-recursive-include guppy *.py *.glade *.xml
+recursive-include guppy *.py *.glade *.xml pixmaps
+recursive-include test *
 recursive-include pixmaps *.png *.svg
 recursive-include po *.po
 recursive-include testing *.py *.txt puppy
