--- a/pkg/setup.cfg
+++ b/pkg/setup.cfg
@@ -1,4 +1,4 @@
 [bdist_rpm]
 group=Application/Multimedia
-release=1.FC
-requires= puppy >= 1.11 pygtk2 >= 2.6
+release=1.fc11
+requires= pygtk2 >= 2.6
