--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,11 +1,6 @@
-include AUTHORS COPYING MANIFEST.in NEWS README CONTRIBUTORS
-include setup.py Makefile setup.cfg-suse setup.cfg-fedora guppy.desktop
-recursive-include doc *.dia *.png *.txt
+include AUTHORS COPYING MANIFEST.in NEWS README CONTRIBUTORS TODO
+include setup.py Makefile setup.cfg guppy.desktop
 recursive-include guppy *.py *.glade *.xml pixmaps
-recursive-include test *
 recursive-include pixmaps *.png *.svg
 recursive-include po *.po
-recursive-include testing *.py *.txt puppy
 recursive-include puppy *.c *.h Makefile LICENCE *.spec
-recursive-include pkg *
-prune pkg/.arch-ids
